--- a/page3.html
+++ b/page3.html
@@ -52,7 +52,7 @@
 <p id="Q"> 1. In this lesson, you created your own sound board app. Give a brief description of it here. Describe its theme, if it has one, and what particular sounds (music or speeches) it plays. Attach or embed your video.</p>
 <p id="A"> Me and my partners sound board app was centered around pokemon, it had 6 starter pokemons and they all played a sound of their voice. If the tablet was shaken it would play the theme song of pokemon, we created this app because my parnter loves anime like pokemon also since we both grew up watching pokemon.</p>
 <video width="600" height="350" controls>
-    <source src="images/PokemonAppDemo.MOV" type="video/mp4"></video>
+    <source src="./images/PokemonAppDemo.MOV" type="video/mp4"></video>
  <p id="Q"> 2. Describe how you designed your app's UI. What components does it use?</p>
  <p id="A">Me and my partner designed our App's UI based on the I Have a Dream App, we added extra fetures to our app to make our app more appealing than the I Have A Dream App. The components our app uses is buttons, sound player, images, and shake sensitivity.</p>
  <p id="Q"> 3. Now that you've had some experience building apps in App Inventor, what do you think about programming. Is it a creative activity? In what ways does it allow you to express yourself?</p>
