--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
         <a href="page2.html">2</a>
         <a href="page3.html">3</a>
         <a href="page4.html">4</a>
+        <br>
+        <a href="Unit3Page1.html">Unit 3</a>
   </body>
 </html>
