--- a/Unit3Page2.html
+++ b/Unit3Page2.html
@@ -32,7 +32,7 @@
 <p id="Q">How is GPS used in this app? Do some research to find out how GPS works and describe it here in a couple sentences.</p>
 <p id="A">GPS is used in this app with the my location button enhancement, showing where the person using the app is. GPS works by connecting 30 satellities around the earth and would ping satellities, once it ends up with the closes 3 satellities around you and it can pin point your exact location with latitude and longitude. </p>
 <p id="Q">Insert screenshots of the enhancements that you made below and describe how they work.</p>
-<img src="images/location">
+<img src="/images/location">
 <p id="A">One enhancement that I made was the location button, so when clicked on the button it'll bring you to your current location. I did this by using the "My Location.click do" then "call Map1. Pan to Lat, Long, Zoom. </p>
 <h2>3.9 - Map Tour with Tiny DB</h2>
 <p id="Q">What does it mean to say that data is 'persistent'?</p>
