--- a/Unit3Page1.html
+++ b/Unit3Page1.html
@@ -8,7 +8,7 @@
 <h1 id=header> Portfolio </h1>
 	<h2> 3.2 - Paint Pot Tutorial</h2>
 	<p id="Q">Explain the meaning of the statements shown here, both in AP CSP pseudocode and App Inventor. For example, suppose the variable X has the value 10 before the statement is executed. What value would it have after the statement is executed?</p>
-	<img src="/images/X">
+	<img src="/images/X.png">
 	<p id="A">The statement in this code is that global x variable "10" would add one after running the code. So the value above would be 11.</p>
 	<p id="Q">One aspect of abstraction is that it helps to reduce details to focus on what's relevant. How does the use of a variable, such as dotsize, instead of a value, such as '5', help to reduce detail and focus on what is essential in this program?</p>
 	<p id="A"> The use of variable "dotsize" instead of value such as "5", can help students represent any numbers rather than a particular value making it easier and simpler to code since it wont be repetative to add new numbbers to your variable everytime. </p>
@@ -23,7 +23,7 @@
 	<br>
 	<h2> 3.4 - Paint Pot Projects</h2>
 	<p id="Q">For enhancement #5 (the "If Block Exercise") give a brief description of your solution to this problem. PROVIDE A SCREENSHOT OF YOUR APP'S CODE -- the revised blocks -- and describe how the if/else block works to solve the problem in this case. If appropriate, include a description of any significant problems or bugs you encountered in solving this problem. App Inventor now has a Download Blocks as Image feature (right click on the white space in the blocks editor to choose) that also can be used to take a screenshot of all of your code or the Windows snipping tool can be used.</p>
-	<img src="/images/FullCode">
+	<img src="/images/FullCode.png">
 	<p id="A"> Even thought I did not use the If/else block for this problem I think an if/ else block would make my code easier to understand for a computer since so many buttons are connected to one global dotsize, instead it could be if clicked "PlusButton" then add "1" to "global dotsize". Some problems or bugs that I have encounterd while solving this problem was how to change the the line width into the dotsize I wanted, but trial and error mad eme figure out that there was a block that could set the line width on the canvas into your global dotsize. </p>
 	<p id="Q"> When you use the Camera component to take a picture as the Canvas background, explain why the picture goes away when the app is restarted. HINT: Think about the different hardware components we talked about in an earlier lesson and where on the device the picture is stored. What do you think could be done to prevent the picture from disappearing when the app is restarted?</p>
 	<p id="A"> I believe that a picture goes away when the app is restarted because the app has no way of storing the image anywhere. I think something like TinyDB in lesson 3.9 could be used to prevent the picture from disappearing when the app is restarted since TinyDB has the ability to store things onto a data base.</p>
@@ -32,7 +32,7 @@
 	<p id="Q"> The Wikipedia article on refactoring talks about code smell and one motivation for engaging in refactoring. What is code smell? Describe briefly two examples of "code smell" and how refactoring would eliminate them.</p>
 	<p id="A">Code smell is a characteristic in a code that can lead to big problems later on. Two examples of code smell are when you have multiple codes in different areas that have the same function and a super complex code. Refactoring can elimate this problem because it'll short and less complex than before. </p>
 	<p id="Q">Insert a screenshot of the procedure from your app below.	</p>
-	<img src="/images/Procedure">
+	<img src="/images/Procedure.png">
 	<p id="Q">What are the advantages of using procedural abstraction? Name at least 2 advantages.</p>
 	<p id="A"> The advantages of using procedural abstraction is making your code simple and easier to understand and read if shared to other coders.</p>
 	<br>
