--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <a href="page4.html">4</a>
         <br>
         <a href="Unit3Page1.html">Unit 3</a>
+        <a href="Unit4Page1.html">Unit 4</a>
   </body>
 </html>
