--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <a href="https://www.youtube.com/watch?v=_wVB6pfWwnE"> Click Here! </a>
        </div>
       <h2 id="header2"> About Me </h2> 
-        <p> Hi! I'm Kelly Ruan! I'm a 16 year old born in San Francisco. I am a incoming senior at Phillip & Sala Burton High School. Some hobbies I enjoy are cooking, baking, playing video games, and watching movies. When I am free I am most likely at home or at the movies.</p>
+        <p> Hi! I'm Kelly Ruan! I'm a 17 year old born in San Francisco. I am a senior at Phillip & Sala Burton High School. Some hobbies I enjoy are cooking, baking, playing video games, and watching movies. When I am free I am most likely at home or at the movies.</p>
         
         <div class="header2image">
           <img class="rowimage" src="https://media3.giphy.com/media/l0HlxMtYEPm1XRlMA/source.gif">
@@ -30,5 +30,7 @@
         <br>
         <a href="Unit3Page1.html">Unit 3</a>
         <a href="Unit4Page1.html">Unit 4</a>
+        <a href="Unit5Page1.html">Unit 5</a>
+
   </body>
 </html>
