Commit before push

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a href="Unit3Page1.html">Unit 3</a>
         <a href="Unit4Page1.html">Unit 4</a>
         <a href="Unit5Page1.html">Unit 5</a>
+        <a href="Unit6Page1.html">Unit 6</a>
 
   </body>
 </html>
