--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <a href="Unit4Page1.html">Unit 4</a>
         <a href="Unit5Page1.html">Unit 5</a>
         <a href="Unit6Page1.html">Unit 6</a>
+        <br>
+        <a href="Unit7Page1.html">Unit 7</a>
 
   </body>
 </html>
